src/parser/antlr4/SimCExprParser.ts
// Generated from ./src/parser/antlr4/SimCExpr.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { SimCExprListener } from "./SimCExprListener";
import { SimCExprVisitor } from "./SimCExprVisitor";


export class SimCExprParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly OP_AND = 6;
	public static readonly OP_OR = 7;
	public static readonly OP_XOR = 8;
	public static readonly OP_NOT = 9;
	public static readonly OP_PLUS = 10;
	public static readonly OP_MINUS = 11;
	public static readonly OP_MUL = 12;
	public static readonly OP_DIV = 13;
	public static readonly OP_MOD = 14;
	public static readonly OP_ABS = 15;
	public static readonly OP_CEIL = 16;
	public static readonly OP_FLOOR = 17;
	public static readonly OP_GT = 18;
	public static readonly OP_GE = 19;
	public static readonly OP_LT = 20;
	public static readonly OP_LE = 21;
	public static readonly OP_EQ = 22;
	public static readonly OP_EQEQ = 23;
	public static readonly OP_NE = 24;
	public static readonly OP_MAX = 25;
	public static readonly OP_MIN = 26;
	public static readonly OP_PAREN_LEFT = 27;
	public static readonly OP_PAREN_RIGHT = 28;
	public static readonly NUMBER = 29;
	public static readonly MIXED_ID = 30;
	public static readonly STRING = 31;
	public static readonly COMMENT = 32;
	public static readonly WS = 33;
	public static readonly RULE_parse = 0;
	public static readonly RULE_commentLine = 1;
	public static readonly RULE_actionLine = 2;
	public static readonly RULE_actionParam = 3;
	public static readonly RULE_identifier = 4;
	public static readonly RULE_actionName = 5;
	public static readonly RULE_sublistName = 6;
	public static readonly RULE_accessPattern = 7;
	public static readonly RULE_expression = 8;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"parse", "commentLine", "actionLine", "actionParam", "identifier", "actionName", 
		"sublistName", "accessPattern", "expression",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'actions'", "'.'", "'+='", "'/'", "','", "'&'", "'|'", "'^'", 
		"'!'", "'+'", "'-'", "'*'", "'%'", "'%%'", "'@'", "'ceil'", "'floor'", 
		"'>'", "'>='", "'<'", "'<='", "'='", "'=='", "'!='", "'<?'", "'>?'", "'('", 
		"')'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, "OP_AND", 
		"OP_OR", "OP_XOR", "OP_NOT", "OP_PLUS", "OP_MINUS", "OP_MUL", "OP_DIV", 
		"OP_MOD", "OP_ABS", "OP_CEIL", "OP_FLOOR", "OP_GT", "OP_GE", "OP_LT", 
		"OP_LE", "OP_EQ", "OP_EQEQ", "OP_NE", "OP_MAX", "OP_MIN", "OP_PAREN_LEFT", 
		"OP_PAREN_RIGHT", "NUMBER", "MIXED_ID", "STRING", "COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(SimCExprParser._LITERAL_NAMES, SimCExprParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return SimCExprParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "SimCExpr.g4"; }

	// @Override
	public get ruleNames(): string[] { return SimCExprParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return SimCExprParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(SimCExprParser._ATN, this);
	}
	// @RuleVersion(0)
	public parse(): ParseContext {
		let _localctx: ParseContext = new ParseContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, SimCExprParser.RULE_parse);
		try {
			this.state = 27;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 0, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 18;
				this.actionLine();
				this.state = 19;
				this.match(SimCExprParser.EOF);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 21;
				this.commentLine();
				this.state = 22;
				this.match(SimCExprParser.EOF);
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 24;
				this.expression(0);
				this.state = 25;
				this.match(SimCExprParser.EOF);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public commentLine(): CommentLineContext {
		let _localctx: CommentLineContext = new CommentLineContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, SimCExprParser.RULE_commentLine);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 29;
			this.match(SimCExprParser.COMMENT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionLine(): ActionLineContext {
		let _localctx: ActionLineContext = new ActionLineContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, SimCExprParser.RULE_actionLine);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 31;
			this.match(SimCExprParser.T__0);
			this.state = 34;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SimCExprParser.T__1) {
				{
				this.state = 32;
				this.match(SimCExprParser.T__1);
				this.state = 33;
				this.sublistName();
				}
			}

			this.state = 36;
			_la = this._input.LA(1);
			if (!(_la === SimCExprParser.T__2 || _la === SimCExprParser.OP_EQ)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 38;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === SimCExprParser.T__3) {
				{
				this.state = 37;
				this.match(SimCExprParser.T__3);
				}
			}

			this.state = 40;
			this.actionName();
			this.state = 45;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === SimCExprParser.T__4) {
				{
				{
				this.state = 41;
				this.match(SimCExprParser.T__4);
				this.state = 42;
				this.actionParam();
				}
				}
				this.state = 47;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionParam(): ActionParamContext {
		let _localctx: ActionParamContext = new ActionParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, SimCExprParser.RULE_actionParam);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 48;
			this.identifier();
			this.state = 49;
			this.match(SimCExprParser.OP_EQ);
			this.state = 50;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public identifier(): IdentifierContext {
		let _localctx: IdentifierContext = new IdentifierContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, SimCExprParser.RULE_identifier);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 52;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimCExprParser.NUMBER) | (1 << SimCExprParser.MIXED_ID) | (1 << SimCExprParser.STRING))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public actionName(): ActionNameContext {
		let _localctx: ActionNameContext = new ActionNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, SimCExprParser.RULE_actionName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 54;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sublistName(): SublistNameContext {
		let _localctx: SublistNameContext = new SublistNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, SimCExprParser.RULE_sublistName);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.identifier();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public accessPattern(): AccessPatternContext {
		let _localctx: AccessPatternContext = new AccessPatternContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, SimCExprParser.RULE_accessPattern);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 58;
			this.identifier();
			this.state = 63;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 59;
					this.match(SimCExprParser.T__1);
					this.state = 60;
					this.identifier();
					}
					}
				}
				this.state = 65;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 4, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	// @RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 16;
		this.enterRecursionRule(_localctx, 16, SimCExprParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 83;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				_localctx = new ParenExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 67;
				this.match(SimCExprParser.OP_PAREN_LEFT);
				this.state = 68;
				this.expression(0);
				this.state = 69;
				this.match(SimCExprParser.OP_PAREN_RIGHT);
				}
				break;

			case 2:
				{
				_localctx = new MathFuncExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 71;
				_la = this._input.LA(1);
				if (!(_la === SimCExprParser.OP_CEIL || _la === SimCExprParser.OP_FLOOR)) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 72;
				this.match(SimCExprParser.OP_PAREN_LEFT);
				this.state = 73;
				this.expression(0);
				this.state = 74;
				this.match(SimCExprParser.OP_PAREN_RIGHT);
				}
				break;

			case 3:
				{
				_localctx = new UnaryExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 76;
				_la = this._input.LA(1);
				if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimCExprParser.OP_NOT) | (1 << SimCExprParser.OP_PLUS) | (1 << SimCExprParser.OP_MINUS) | (1 << SimCExprParser.OP_ABS))) !== 0))) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				this.state = 77;
				this.expression(13);
				}
				break;

			case 4:
				{
				_localctx = new NumberExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 78;
				this.match(SimCExprParser.NUMBER);
				}
				break;

			case 5:
				{
				_localctx = new StringExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 79;
				this.match(SimCExprParser.STRING);
				}
				break;

			case 6:
				{
				_localctx = new MixedIdExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 80;
				this.match(SimCExprParser.MIXED_ID);
				}
				break;

			case 7:
				{
				_localctx = new AccessExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 81;
				this.accessPattern();
				}
				break;

			case 8:
				{
				_localctx = new AnyTokenExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 82;
				this.matchWildcard();
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 108;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					if (this._parseListeners != null) {
						this.triggerExitRuleEvent();
					}
					_prevctx = _localctx;
					{
					this.state = 106;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
					case 1:
						{
						_localctx = new MultiplicativeExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 85;
						if (!(this.precpred(this._ctx, 12))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 12)");
						}
						this.state = 86;
						_la = this._input.LA(1);
						if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimCExprParser.OP_MUL) | (1 << SimCExprParser.OP_DIV) | (1 << SimCExprParser.OP_MOD))) !== 0))) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 87;
						this.expression(13);
						}
						break;

					case 2:
						{
						_localctx = new AdditiveExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 88;
						if (!(this.precpred(this._ctx, 11))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 11)");
						}
						this.state = 89;
						_la = this._input.LA(1);
						if (!(_la === SimCExprParser.OP_PLUS || _la === SimCExprParser.OP_MINUS)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 90;
						this.expression(12);
						}
						break;

					case 3:
						{
						_localctx = new MinMaxExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 91;
						if (!(this.precpred(this._ctx, 10))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 10)");
						}
						this.state = 92;
						_la = this._input.LA(1);
						if (!(_la === SimCExprParser.OP_MAX || _la === SimCExprParser.OP_MIN)) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 93;
						this.expression(11);
						}
						break;

					case 4:
						{
						_localctx = new ComparisonExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 94;
						if (!(this.precpred(this._ctx, 9))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 9)");
						}
						this.state = 95;
						_la = this._input.LA(1);
						if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << SimCExprParser.OP_GT) | (1 << SimCExprParser.OP_GE) | (1 << SimCExprParser.OP_LT) | (1 << SimCExprParser.OP_LE) | (1 << SimCExprParser.OP_EQ) | (1 << SimCExprParser.OP_EQEQ) | (1 << SimCExprParser.OP_NE))) !== 0))) {
						this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 96;
						this.expression(10);
						}
						break;

					case 5:
						{
						_localctx = new AndExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 97;
						if (!(this.precpred(this._ctx, 8))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 8)");
						}
						this.state = 98;
						this.match(SimCExprParser.OP_AND);
						this.state = 99;
						this.expression(9);
						}
						break;

					case 6:
						{
						_localctx = new XorExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 100;
						if (!(this.precpred(this._ctx, 7))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 7)");
						}
						this.state = 101;
						this.match(SimCExprParser.OP_XOR);
						this.state = 102;
						this.expression(8);
						}
						break;

					case 7:
						{
						_localctx = new OrExprContext(new ExpressionContext(_parentctx, _parentState));
						this.pushNewRecursionContext(_localctx, _startState, SimCExprParser.RULE_expression);
						this.state = 103;
						if (!(this.precpred(this._ctx, 6))) {
							throw this.createFailedPredicateException("this.precpred(this._ctx, 6)");
						}
						this.state = 104;
						this.match(SimCExprParser.OP_OR);
						this.state = 105;
						this.expression(7);
						}
						break;
					}
					}
				}
				this.state = 110;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public sempred(_localctx: RuleContext, ruleIndex: number, predIndex: number): boolean {
		switch (ruleIndex) {
		case 8:
			return this.expression_sempred(_localctx as ExpressionContext, predIndex);
		}
		return true;
	}
	private expression_sempred(_localctx: ExpressionContext, predIndex: number): boolean {
		switch (predIndex) {
		case 0:
			return this.precpred(this._ctx, 12);

		case 1:
			return this.precpred(this._ctx, 11);

		case 2:
			return this.precpred(this._ctx, 10);

		case 3:
			return this.precpred(this._ctx, 9);

		case 4:
			return this.precpred(this._ctx, 8);

		case 5:
			return this.precpred(this._ctx, 7);

		case 6:
			return this.precpred(this._ctx, 6);
		}
		return true;
	}

	public static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SimCExprParser.__ATN) {
			SimCExprParser.__ATN = new ATNDeserializer().deserialize(Utils.toCharArray(SimCExprParser._serializedATN));
		}

		return SimCExprParser.__ATN;
	}

}

export class ParseContext extends ParserRuleContext {
	public actionLine(): ActionLineContext | undefined {
		return this.tryGetRuleContext(0, ActionLineContext);
	}
	public EOF(): TerminalNode { return this.getToken(SimCExprParser.EOF, 0); }
	public commentLine(): CommentLineContext | undefined {
		return this.tryGetRuleContext(0, CommentLineContext);
	}
	public expression(): ExpressionContext | undefined {
		return this.tryGetRuleContext(0, ExpressionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_parse; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterParse) {
			listener.enterParse(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitParse) {
			listener.exitParse(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitParse) {
			return visitor.visitParse(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class CommentLineContext extends ParserRuleContext {
	public COMMENT(): TerminalNode { return this.getToken(SimCExprParser.COMMENT, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_commentLine; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterCommentLine) {
			listener.enterCommentLine(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitCommentLine) {
			listener.exitCommentLine(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitCommentLine) {
			return visitor.visitCommentLine(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ActionLineContext extends ParserRuleContext {
	public actionName(): ActionNameContext {
		return this.getRuleContext(0, ActionNameContext);
	}
	public OP_EQ(): TerminalNode { return this.getToken(SimCExprParser.OP_EQ, 0); }
	public sublistName(): SublistNameContext | undefined {
		return this.tryGetRuleContext(0, SublistNameContext);
	}
	public actionParam(): ActionParamContext[];
	public actionParam(i: number): ActionParamContext;
	public actionParam(i?: number): ActionParamContext | ActionParamContext[] {
		if (i === undefined) {
			return this.getRuleContexts(ActionParamContext);
		} else {
			return this.getRuleContext(i, ActionParamContext);
		}
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_actionLine; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterActionLine) {
			listener.enterActionLine(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitActionLine) {
			listener.exitActionLine(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitActionLine) {
			return visitor.visitActionLine(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ActionParamContext extends ParserRuleContext {
	public identifier(): IdentifierContext {
		return this.getRuleContext(0, IdentifierContext);
	}
	public OP_EQ(): TerminalNode { return this.getToken(SimCExprParser.OP_EQ, 0); }
	public expression(): ExpressionContext {
		return this.getRuleContext(0, ExpressionContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_actionParam; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterActionParam) {
			listener.enterActionParam(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitActionParam) {
			listener.exitActionParam(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitActionParam) {
			return visitor.visitActionParam(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class IdentifierContext extends ParserRuleContext {
	public NUMBER(): TerminalNode | undefined { return this.tryGetToken(SimCExprParser.NUMBER, 0); }
	public STRING(): TerminalNode | undefined { return this.tryGetToken(SimCExprParser.STRING, 0); }
	public MIXED_ID(): TerminalNode | undefined { return this.tryGetToken(SimCExprParser.MIXED_ID, 0); }
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_identifier; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterIdentifier) {
			listener.enterIdentifier(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitIdentifier) {
			listener.exitIdentifier(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitIdentifier) {
			return visitor.visitIdentifier(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class ActionNameContext extends ParserRuleContext {
	public identifier(): IdentifierContext {
		return this.getRuleContext(0, IdentifierContext);
	}
	constructor(parent: ParserRuleContext | undefined, invokingState: number) {
		super(parent, invokingState);
	}
	// @Override
	public get ruleIndex(): number { return SimCExprParser.RULE_actionName; }
	// @Override
	public enterRule(listener: SimCExprListener): void {
		if (listener.enterActionName) {
			listener.enterActionName(this);
		}
	}
	// @Override
	public exitRule(listener: SimCExprListener): void {
		if (listener.exitActionName) {
			listener.exitActionName(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SimCExprVisitor<Result>): Result {
		if (visitor.visitActionName) {
			return visitor.visitActionName(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

